docs(comparison-table): fix color contrast for minus icon (#1488)
* docs(comparison-table): fix color contrast for minus icon

* fix(comparison-table): fix color contrast for minus icons

---------

--- a/projects/ng-aquila/documentation/examples/comparison-table/comparison-table-hidden-columns/comparison-table-hidden-columns-example.css
+++ b/projects/ng-aquila/documentation/examples/comparison-table/comparison-table-hidden-columns/comparison-table-hidden-columns-example.css
@@ -79,10 +79,6 @@
     }
 }
 
-.minus-icon {
-    color: var(--documentation-comparison-table-example-minus-color);
-}
-
 .check-icon {
     color: var(--success);
 }
